--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "dependencies": {
     "@plaiceholder/next": "^3.0.0",
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
     "encoding": "^0.1.13",
     "hangul-chosung-search": "^1.0.2",
     "next": "13.4",
     "next-themes": "^0.2.1",
     "notion-client": "^6.16.0",
     "plaiceholder": "^3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-notion-x": "^6.16.0",
     "react-paginate": "^8.1.4",
