--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-markdown": "^9.0.1",
     "react-notion-x": "^6.16.0",
     "react-paginate": "^8.1.4",
+    "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
     "sharp": "^0.32.1"
   },
